# player-net

./: .gitignore  pyproject.toml
docs/: training.ipynb
playernet/core/networks/: compressor.py
playernet/core/observations/: observation_code_plus.py  test capture.py
playernet/settings/: base.py
